--- a/Parsing the Connect text with NLTK.ipynb
+++ b/Parsing the Connect text with NLTK.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +167,7 @@
        "True"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -222,18 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "text_en = [w for w in text_en if w not in punct]"
+    "connect_en = [w for w in connect_en if w not in punct]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -241,8 +241,20 @@
     {
      "data": {
       "text/plain": [
-       "['Benjamin',\n",
+       "['103',\n",
+       " 'English',\n",
+       " '245',\n",
+       " 'English',\n",
+       " '266',\n",
+       " 'English',\n",
+       " '285',\n",
+       " 'English',\n",
+       " '290',\n",
+       " 'English',\n",
+       " 'Benjamin',\n",
        " 'Joseph',\n",
+       " 'LastName',\n",
+       " '8',\n",
        " 'years',\n",
        " 'SOLID',\n",
        " 'working',\n",
@@ -253,28 +265,16 @@
        " 'various',\n",
        " 'project',\n",
        " 'types',\n",
-       " 'embedded',\n",
-       " 'systems',\n",
-       " 'Windows',\n",
-       " 'applications',\n",
-       " 'Web',\n",
-       " 'applications',\n",
-       " 'cloud',\n",
-       " 'backend',\n",
-       " 'applications',\n",
-       " 'experience',\n",
-       " 'working',\n",
-       " 'japanese',\n",
-       " 'swiss']"
+       " 'embedded']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_en[:25]"
+    "connect_en[:25]"
    ]
   },
   {
@@ -286,14 +286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import re\n",
-    "text_en = [item for item in text_en if not re.search('\\d', item)]"
+    "connect_en = [item for item in connect_en if not re.search('\\d', item)]"
    ]
   },
   {
@@ -305,18 +305,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "text_en = [item for item in text_en if not re.search('FirstName|LastName|English', item)]"
+    "connect_en = [item for item in connect_en if not re.search('FirstName|LastName|English', item)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -351,13 +351,13 @@
        " 'swiss']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_en[:25]"
+    "connect_en[:25]"
    ]
   },
   {
@@ -369,19 +369,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "### to do that, we need to convert our list to a nltk text\n",
-    "text = nltk.Text(text_en)"
+    "### to do that, we need to convert our list to a nltk text, which has a lot of methods to do advanced analysis tasks\n",
+    "text = nltk.Text(connect_en)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -442,25 +442,25 @@
        " ('working', 18),\n",
        " ('design', 18),\n",
        " ('work', 18),\n",
-       " ('engineer', 17),\n",
        " ('also', 17),\n",
+       " ('engineer', 17),\n",
        " ('developer', 16),\n",
        " ('well', 15),\n",
        " ('Software', 14),\n",
-       " ('web', 13),\n",
-       " ('skills', 13),\n",
-       " ('requirements', 13),\n",
        " ('new', 13),\n",
-       " ('professional', 13),\n",
+       " ('web', 13),\n",
        " ('quality', 13),\n",
+       " ('requirements', 13),\n",
+       " ('professional', 13),\n",
+       " ('skills', 13),\n",
+       " ('several', 12),\n",
        " ('und', 12),\n",
-       " ('agile', 12),\n",
-       " ('technologies', 12),\n",
        " ('solutions', 12),\n",
-       " ('business', 12)]"
+       " ('technologies', 12),\n",
+       " ('agile', 12)]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,8 +478,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -493,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
