tidied up the tutorials a bit

--- a/Parsing the Connect text with NLTK.ipynb
+++ b/Parsing the Connect text with NLTK.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Science Challenge - Parsing the Connect advertising texts with NLTK"
+    "# Data Science Challenge"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A quick tutorial"
+    "## A quick and not very successful attempt to get some information from the ERNI Connect advertising texts"
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +75,7 @@
     "# this is normal Python stuff, no nltk magic here.\n",
     "# just read in the file and if the line has \"English\" in it, then keep it, otherwise discard the entire line\n",
     "\n",
-    "### change the paths to your own paths to these files\n",
+    "### NOTE change the paths to your own paths to these files\n",
     "\n",
     "oldfile = r'C:\\Users\\lon\\Desktop\\connect.txt'         # this is the original connect advertising texts data set\n",
     "newfile = r'C:\\Users\\lon\\Desktop\\connect_new.txt'     # this file doesn't exist yet, we're creating it\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -121,19 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['103', 'English', '?', '245', 'English', '?', '266', ...]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (connect_en)"
    ]
@@ -147,31 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\lon\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# if you haven't already downloaded all the nltk corpora then this will download the 'stopwords' corpus for you\n",
     "nltk.download('stopwords')"
@@ -179,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -193,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -233,46 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['103',\n",
-       " 'English',\n",
-       " '245',\n",
-       " 'English',\n",
-       " '266',\n",
-       " 'English',\n",
-       " '285',\n",
-       " 'English',\n",
-       " '290',\n",
-       " 'English',\n",
-       " 'Benjamin',\n",
-       " 'Joseph',\n",
-       " 'LastName',\n",
-       " '8',\n",
-       " 'years',\n",
-       " 'SOLID',\n",
-       " 'working',\n",
-       " 'experience',\n",
-       " 'software',\n",
-       " 'engineering',\n",
-       " 'experience',\n",
-       " 'various',\n",
-       " 'project',\n",
-       " 'types',\n",
-       " 'embedded']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "connect_en[:25]"
    ]
@@ -286,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -305,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -316,46 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Benjamin',\n",
-       " 'Joseph',\n",
-       " 'years',\n",
-       " 'SOLID',\n",
-       " 'working',\n",
-       " 'experience',\n",
-       " 'software',\n",
-       " 'engineering',\n",
-       " 'experience',\n",
-       " 'various',\n",
-       " 'project',\n",
-       " 'types',\n",
-       " 'embedded',\n",
-       " 'systems',\n",
-       " 'Windows',\n",
-       " 'applications',\n",
-       " 'Web',\n",
-       " 'applications',\n",
-       " 'cloud',\n",
-       " 'backend',\n",
-       " 'applications',\n",
-       " 'experience',\n",
-       " 'working',\n",
-       " 'japanese',\n",
-       " 'swiss']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "connect_en[:25]"
    ]
@@ -364,42 +266,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's look at the most common collocations"
+    "### Most common collocations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "### to do that, we need to convert our list to a nltk text, which has a lot of methods to do advanced analysis tasks\n",
+    "### convert our list to a nltk text, which has a lot of methods to do advanced analysis tasks\n",
     "text = nltk.Text(connect_en)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Software Engineer; gained experience; several years; NET framework;\n",
-      "back end; Active Directory; Eclipse Helios; JSF JSP; Marketing Sales;\n",
-      "Motion Graphics; Product Owner; construction installation; firewalls\n",
-      "Active; unter Beweis; software engineer; Project Manager; Apache\n",
-      "Maven; Executive Search; among others; configuration administration;\n",
-      "geographically distributed; long term; mail servers; maintainance\n",
-      "network; servers firewalls\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text.collocations(25)     # print the 25 most common collocations (multi-word expressions)"
    ]
@@ -408,12 +296,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's get nifty and find out the frequency distributions of the most common words"
+    "### Find out the frequency distributions of the most common words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -424,67 +312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('experience', 59),\n",
-       " ('software', 40),\n",
-       " ('development', 35),\n",
-       " ('projects', 28),\n",
-       " ('years', 28),\n",
-       " ('project', 20),\n",
-       " ('working', 18),\n",
-       " ('design', 18),\n",
-       " ('work', 18),\n",
-       " ('also', 17),\n",
-       " ('engineer', 17),\n",
-       " ('developer', 16),\n",
-       " ('well', 15),\n",
-       " ('Software', 14),\n",
-       " ('new', 13),\n",
-       " ('web', 13),\n",
-       " ('quality', 13),\n",
-       " ('requirements', 13),\n",
-       " ('professional', 13),\n",
-       " ('skills', 13),\n",
-       " ('several', 12),\n",
-       " ('und', 12),\n",
-       " ('solutions', 12),\n",
-       " ('technologies', 12),\n",
-       " ('agile', 12)]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fdist.most_common()[:25]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda env:NLP]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-env-NLP-py"
   },
   "language_info": {
    "codemirror_mode": {
